--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,7 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
-release.properties
+application.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
@@ -199,3 +199,4 @@ README.html
 *.iml
 .idea
 .exercism
+application.properties
