--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ build/
 
 # Config
 ########
-application.properties
+/src/main/resources/application.properties
 application.yml
 *.env
 *.keystore
